# cpp_ffvideo_streamer

./: .gitignore  CMakeLists.txt  README.md
configs/: config.json
include/: command_line_args_parser.h  common_functions.h  video_streamer.h
src/: command_line_args_parser.cpp  common_functions.cpp  main.cpp  video_streamer.cpp
